--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "oat-sa/lib-lti1p3-core": "^7.0.2",
         "psr/log": "^1 || ^2 || ^3",
         "symfony/framework-bundle": "^6.4",
-        "symfony/psr-http-message-bridge": "^2.1",
+        "symfony/psr-http-message-bridge": "^2.1|^6.4",
         "symfony/security-bundle": "^6.4",
         "symfony/security-core": "^6.4",
         "symfony/security-http": "^6.4",
